--- a/xa/java/helmcharts/transfer-nonxa-mongodb/templates/sampleapps.yaml
+++ b/xa/java/helmcharts/transfer-nonxa-mongodb/templates/sampleapps.yaml
@@ -85,6 +85,15 @@ spec:
               value: {{ .Values.sampleapps.dept1.propagateTraceHeader | quote }}
             - name: ORACLE_TMM_XA_RMID
               value: {{ .Values.sampleapps.dept1.resourceManagerId }}
+            # Springboot properties
+            - name: SPRING_MICROTX_COORDINATOR_URL
+              value: http://otmm-tcs:9000/api/v1
+            - name: SPRING_MICROTX_PARTICIPANT_URL
+              value: http://dept1:8081
+            - name: SPRING_MICROTX_PROPAGATION_ACTIVE
+              value: {{ .Values.sampleapps.dept1.propagateTraceHeader| quote }}
+            - name: SPRING_MICROTX_XA_RESOURCE_MANAGER_ID
+              value: {{ .Values.sampleapps.dept1.resourceManagerId }}
       imagePullSecrets:
         - name: {{ .Values.sampleapps.dept1.imagePullSecret }}
 ---
@@ -156,7 +165,7 @@ spec:
               value: {{ .Values.sampleapps.dept2.propagateTraceHeader| quote }}
             - name: ORACLE_TMM_XA_RMID
               value: {{ .Values.sampleapps.dept2.resourceManagerId }}
-            ## Copying values for Springboot lib
+            # Springboot properties
             - name: SPRING_MICROTX_COORDINATOR_URL
               value: http://otmm-tcs:9000/api/v1
             - name: SPRING_MICROTX_PARTICIPANT_URL
@@ -225,6 +234,8 @@ spec:
           env:
             - name: ORACLE_TMM_TCS_URL
               value: http://otmm-tcs:9000/api/v1
+            - name: ORACLE_TMM_CALLBACK_URL
+              value: http://teller:8080
             - name: DEPARTMENTONEENDPOINT
               value: http://dept1:8081
             - name: DEPARTMENTTWOENDPOINT
@@ -233,6 +244,13 @@ spec:
               value: teller
             - name: ORACLE_TMM_PROPAGATE_TRACE_HEADERS
               value: {{ .Values.sampleapps.teller.propagateTraceHeader| quote }}
+            # Springboot properties
+            - name: SPRING_MICROTX_COORDINATOR_URL
+              value: http://otmm-tcs:9000/api/v1
+            - name: SPRING_MICROTX_PROPAGATION_ACTIVE
+              value: {{ .Values.sampleapps.teller.propagateTraceHeader| quote }}
+            - name: SPRING_MICROTX_PARTICIPANT_URL
+              value: http://teller:8080
       imagePullSecrets:
         - name: {{ .Values.sampleapps.teller.imagePullSecret }}
 ---
