--- a/xa/java/helmcharts/transfer-teller-as-participant/templates/sampleapps.yaml
+++ b/xa/java/helmcharts/transfer-teller-as-participant/templates/sampleapps.yaml
@@ -85,6 +85,15 @@ spec:
               value: {{ .Values.sampleapps.dept1.propagateTraceHeader | quote }}
             - name: ORACLE_TMM_XA_RMID
               value: {{ .Values.sampleapps.dept1.resourceManagerId }}
+            # Springboot properties
+            - name: SPRING_MICROTX_COORDINATOR_URL
+              value: http://otmm-tcs:9000/api/v1
+            - name: SPRING_MICROTX_PARTICIPANT_URL
+              value: http://dept1:8081
+            - name: SPRING_MICROTX_PROPAGATION_ACTIVE
+              value: {{ .Values.sampleapps.dept1.propagateTraceHeader| quote }}
+            - name: SPRING_MICROTX_XA_RESOURCE_MANAGER_ID
+              value: {{ .Values.sampleapps.dept1.resourceManagerId }}
       imagePullSecrets:
         - name: {{ .Values.sampleapps.dept1.imagePullSecret }}
 ---
@@ -142,14 +151,10 @@ spec:
           ports:
             - containerPort: 8082
           env:
-            - name: SPRING_MICROTX_COORDINATOR_URL
+            - name: ORACLE_TMM_TCS_URL
               value: http://otmm-tcs:9000/api/v1
-            - name: SPRING_MICROTX_PARTICIPANT_URL
+            - name: ORACLE_TMM_CALLBACK_URL
               value: http://dept2:8082
-            - name: SPRING_MICROTX_PROPAGATION_ACTIVE
-              value: {{ .Values.sampleapps.dept2.propagateTraceHeader| quote }}
-            - name: SPRING_MICROTX_XA_RESOURCE_MANAGER_ID
-              value: {{ .Values.sampleapps.dept2.resourceManagerId }}            
             - name: SERVICE_NAME
               value: dept2
             - name: DEPARTMENTDATASOURCE_URL
@@ -157,17 +162,20 @@ spec:
             - name: DEPARTMENTDATASOURCE_USER
               value: {{ .Values.sampleapps.dept2.databaseUser }}
             - name: DEPARTMENTDATASOURCE_PASSWORD
-              value: {{ .Values.sampleapps.dept2.databasePassword }}            
-            #### Copying the values to older env variables for backward compatibility
-            - name: ORACLE_TMM_TCS_URL
-              value: http://otmm-tcs:9000/api/v1
-            - name: ORACLE_TMM_CALLBACK_URL
-              value: http://dept2:8082
+              value: {{ .Values.sampleapps.dept2.databasePassword }}
             - name: ORACLE_TMM_PROPAGATE_TRACE_HEADERS
               value: {{ .Values.sampleapps.dept2.propagateTraceHeader| quote }}
             - name: ORACLE_TMM_XA_RMID
               value: {{ .Values.sampleapps.dept2.resourceManagerId }}
-
+            # Springboot properties
+            - name: SPRING_MICROTX_COORDINATOR_URL
+              value: http://otmm-tcs:9000/api/v1
+            - name: SPRING_MICROTX_PARTICIPANT_URL
+              value: http://dept2:8082
+            - name: SPRING_MICROTX_PROPAGATION_ACTIVE
+              value: {{ .Values.sampleapps.dept2.propagateTraceHeader| quote }}
+            - name: SPRING_MICROTX_XA_RESOURCE_MANAGER_ID
+              value: {{ .Values.sampleapps.dept2.resourceManagerId }}
       imagePullSecrets:
         - name: {{ .Values.sampleapps.dept2.imagePullSecret }}
 ---
@@ -245,7 +253,7 @@ spec:
               value: {{ .Values.sampleapps.teller.databasePassword }}
             - name: ORACLE_TMM_XA_RMID
               value: {{ .Values.sampleapps.teller.resourceManagerId }}
-            # Copying values for springboot lib
+            # Springboot properties
             - name: SPRING_MICROTX_COORDINATOR_URL
               value: http://otmm-tcs:9000/api/v1
             - name: SPRING_MICROTX_PARTICIPANT_URL
