--- a/xa/java/teller-as-participant-spring-jpa/build.gradle
+++ b/xa/java/teller-as-participant-spring-jpa/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.3'
+    id 'org.springframework.boot' version '3.3.6'
     id 'io.spring.dependency-management' version '1.1.3'
     id 'java'
 }
 
 group = 'com.oracle.mtm.sample'
-version = '24.2.2'
+version = '1.0-SNAPSHOT'
 description = 'Demo springboot project for Microservice Transaction Management initiator application'
 
 java {
@@ -18,10 +18,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter:3.2.3'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.3'
-    implementation 'org.hibernate.orm:hibernate-core:6.2.9.Final'
-    implementation 'com.oracle.microtx:microtx-spring-boot-starter-hibernate:24.2.2'
+    implementation 'org.springframework.boot:spring-boot-starter:3.3.6'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.6'
+    implementation 'org.hibernate.orm:hibernate-core:6.6.3.Final'
+    implementation 'com.oracle.microtx:microtx-spring-boot-starter:1.0-SNAPSHOT'
+    implementation 'com.oracle.microtx:microtx-spring-boot-starter-hibernate:1.0-SNAPSHOT'
     implementation 'io.swagger.core.v3:swagger-annotations:2.2.12'
     implementation 'io.swagger.core.v3:swagger-jaxrs2:2.2.12'
     implementation 'com.oracle.database.jdbc:ojdbc8:21.9.0.0'
