Refactored the Transactional usecases bypropogation class

--- a/xa/java/transactional-jakarta/department-helidon/src/main/resources/tmm.properties
+++ b/xa/java/transactional-jakarta/department-helidon/src/main/resources/tmm.properties
@@ -21,5 +21,5 @@ oracle.tmm.TcsUrl = http://localhost:9000/api/v1
 oracle.tmm.TcsConnPoolSize = 15
 oracle.tmm.CallbackUrl = http://localhost:8081
 # Resource Manager(RM) Unique Id. Make sure to replace the id value with the RM used in the application
-oracle.tmm.xa.Rmid = 4F58D282-0DE1-453C-B872-291FDBF49CFF
+oracle.tmm.xa.Rmid = DEPT-HELIDON-RM
 oracle.tmm.PropagateTraceHeaders = false
