--- a/xa/java/transactional-jakarta/teller-as-participant/src/main/resources/tmm.properties
+++ b/xa/java/transactional-jakarta/teller-as-participant/src/main/resources/tmm.properties
@@ -21,5 +21,5 @@ oracle.tmm.TcsConnPoolSize = 15
 oracle.tmm.CallbackUrl = http://localhost:8080
 oracle.tmm.TransactionTimeout = 300000
 # Resource Manager(RM) Unique Id. Make sure to replace the id value with the RM used in the application
-oracle.tmm.xa.Rmid = 10577276-A3F6-4AA6-BB23-25C8C3BA8BF3
+oracle.tmm.xa.Rmid = INITIATOR-RM
 oracle.tmm.PropagateTraceHeaders = false
