Bug fix for loan app services

--- a/workflow/loan-application/helm/workflow-sample-microservices/templates/docprocessmcp.yaml
+++ b/workflow/loan-application/helm/workflow-sample-microservices/templates/docprocessmcp.yaml
@@ -31,6 +31,6 @@ spec:
       containers:
         - name: {{ .Values.workflowSampleServices.docProcessMcpServer.name }}
           image: {{ .Values.workflowSampleServices.docProcessMcpServer.image }}
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: {{ .Values.workflowSampleServices.docProcessMcpServer.imagePullPolicy }}
           ports:
             - containerPort: 8000
