Limit ephimeral storage

--- a/workflow/loan-application/helm/workflow-sample-microservices/templates/loancompliance.yaml
+++ b/workflow/loan-application/helm/workflow-sample-microservices/templates/loancompliance.yaml
@@ -34,3 +34,8 @@ spec:
           imagePullPolicy: {{ .Values.workflowSampleServices.loanComplianceService.imagePullPolicy }}
           ports:
             - containerPort: 8001
+          resources:
+            requests:
+              ephemeral-storage: 256Mi
+            limits:
+              ephemeral-storage: 5Gi
