--- a/workflow/loan-application/helm/workflow-sample-microservices/templates/ocr.yaml
+++ b/workflow/loan-application/helm/workflow-sample-microservices/templates/ocr.yaml
@@ -34,3 +34,8 @@ spec:
           imagePullPolicy: {{ .Values.workflowSampleServices.ocrService.imagePullPolicy }}
           ports:
             - containerPort: 8000
+          resources:
+            requests:
+              ephemeral-storage: 256Mi
+            limits:
+              ephemeral-storage: 5Gi
