--- a/workflow/loan-application/helm/workflow-sample-microservices/templates/docprocessmcp.yaml
+++ b/workflow/loan-application/helm/workflow-sample-microservices/templates/docprocessmcp.yaml
@@ -34,3 +34,8 @@ spec:
           imagePullPolicy: {{ .Values.workflowSampleServices.docProcessMcpServer.imagePullPolicy }}
           ports:
             - containerPort: 8000
+          resources:
+            requests:
+              ephemeral-storage: 256Mi
+            limits:
+              ephemeral-storage: 5Gi
